--- a/src/onegov/town6/theme/styles/dashboard.scss
+++ b/src/onegov/town6/theme/styles/dashboard.scss
@@ -1,35 +1,45 @@
 /*
     Dashboard
 */
-.boardlet-group {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
+
 
 .boardlet {
-    background: $gray-pastel;
-    border-top: 10px solid $green-light;
-    margin-bottom: 1.5rem;
-    padding: .5rem 1rem 1rem;
-    width: calc((100% / 3) - 1rem);
+    .card {
+        background: $gray-pastel;
+        margin-bottom: 1.5rem;
+        border: 3px solid $green-light;
+        box-shadow: none;
 
-    h2 {
-        font-size: 1.3rem;
-        font-weight: bold;
-        text-align: center;
-        word-wrap: break-word;
+        .card-section {
+            padding-bottom: 2rem !important;
+            padding-top:1.4rem !important;
+        }
+
+        &:hover {
+            border: 3px solid $green-light !important;
+        }
+    }
+
+    h2.h4 {
+        margin-bottom: 1rem;
+        margin-top: -.2rem;
     }
 
     li {
         font-size: .9rem;
     }
 
-    &.boardlet-warning {
+    &.boardlet-warning .card {
         border-top-color: $yellow-light;
+        .h4 {
+            color: $yellow-dark;
+        }
     }
 
-    &.boardlet-failure {
+    &.boardlet-failure .card {
+        .h4 {
+            color: $red-dark;
+        }
         border-top-color: $red-light;
     }
 }
