--- a/src/onegov/town6/theme/styles/header.scss
+++ b/src/onegov/town6/theme/styles/header.scss
@@ -446,6 +446,7 @@ $editbar-fg-color-active: $white;
 
 .edit-bar-container {
     background-color: $editbar-bg-color;
+    padding: 0 !important;
 }
 
 .edit-bar {
