--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -69,17 +69,26 @@ svg {
 }
 
 /*
-    Hints in forms
+    Forms
 */
+@media #{$medium-up} {
+    .two-columns {
+        column-count: 2;
+        column-gap: 4rem;
+
+        form .formfields,
+        form fieldset {
+            break-inside: avoid;
+        }
+    }
+}
+
 form small {
     color: $aluminum;
     display: block;
     font-size: .8rem;
 }
 
-/*
-    Small form fixes
-*/
 .field-ticket_statistics {
     margin-bottom: 1rem !important;
 }
@@ -229,11 +238,11 @@ ul.single-line {
     .manage-matches::before { @include icon-bold('\f24e'); }
     .manage-periods::before { @include icon-bold('\f02d'); }
     .new-activity::before { @include icon-bold('\f135'); }
-    .new-booking::before { @include icon('\f1ec'); }
+    .new-booking::before { @include icon-bold('\f1ec'); }
     .paid-date::before { @include icon('\f274'); }
     .new-notification::before { @include icon('\f003'); }
     .new-occasion::before { @include icon('\f133'); }
-    .new-period::before { @include icon('\f055'); }
+    .new-period::before { @include icon-bold('\f055'); }
     .offer-again::before { @include icon('\f087'); }
     .remove-manual::before { @include icon('\f014'); }
     .request-publication::before { @include icon('\f087'); }
@@ -479,9 +488,9 @@ ul.tags {
 }
 
 .hints {
-    .hint-prebooking::before { @include icon('\f133'); }
-    .hint-prebooking.active::before { @include icon('\f274'); }
-    .hint-prebooking.finish::before { @include icon('\f046'); }
+    .hint-prebooking::before { @include icon-bold('\f133'); }
+    .hint-prebooking.active::before { @include icon-bold('\f274'); }
+    .hint-prebooking.finish::before { @include icon-bold('\f046'); }
 
     .hint-booking::before { @include icon('\f133'); }
     .hint-booking.active::before { @include icon('\f274'); }
@@ -832,12 +841,12 @@ ul.tags {
         }
 
         dd.finished::before {
-            @include icon('\f046');
+            @include icon('\f14a');
             margin-right: .5ex;
         }
 
         dd:not(.finished)::before {
-            @include icon('\f096');
+            @include icon('\f0c8');
             margin-right: .5ex;
         }
     }
@@ -1376,23 +1385,6 @@ $booking-left-margin: 2rem;
     Form panel on the right
 */
 .form-panel {
-    border: 0;
-    margin-bottom: .5rem;
-    padding: 0;
-
-    > h1,
-    > h2,
-    > h3,
-    > h4 {
-        border-bottom: 2px solid $primary-color;
-        font-size: $h4-font-size - $h4-font-reduction;
-        margin-bottom: 0;
-        padding-bottom: .875rem;
-    }
-
-    .form-panel-block {
-        padding: .75rem 0;
-    }
 
     form {
 
@@ -1866,7 +1858,7 @@ $booking-left-margin: 2rem;
     }
 
     .remove-manual.extend-to-family::before {
-        @include icon('\f1f8');
+        @include icon-bold('\f1f8');
         margin-right: 1.25ex;
     }
 
