Remove equalizer and stretch cards per row instead

--- a/src/onegov/town6/theme/styles/news.scss
+++ b/src/onegov/town6/theme/styles/news.scss
@@ -70,6 +70,11 @@
     }
 }
 
+.card.news-card {
+    height: calc(100% - 2rem);
+    margin-bottom: 2rem;
+}
+
 .news-card .card-section a:first-child {
     display: block;
     height: 100%;
