--- a/src/onegov/town6/theme/styles/header.scss
+++ b/src/onegov/town6/theme/styles/header.scss
@@ -588,8 +588,8 @@ $editbar-fg-color-active: $white;
     }
 }
 
-#offCanvas {
-    background: $primary-color;
+#offCanvas,
+#offCanvasFilters {
     z-index: 1000;
 
     .button-area {
@@ -618,16 +618,16 @@ $editbar-fg-color-active: $white;
         background-color: $white;
     }
 
+    .drilldown a {
+        background-color: transparent;
+    }
+
     .side-navigation {
         padding: 0 2rem;
         width: 30rem;
 
         @include breakpoint(small only) {
             width: auto;
-
-            .menu {
-                background: $primary-color;
-            }
         }
 
         li {
@@ -680,9 +680,6 @@ $editbar-fg-color-active: $white;
         }
     }
 
-    .drilldown a {
-        background-color: $primary-color !important;
-    }
 
     // Overwrite foundation arrows
     .accordion-menu .is-accordion-submenu-parent:not(.has-submenu-toggle) > a::after,
@@ -717,7 +714,6 @@ $editbar-fg-color-active: $white;
         padding-left: 3rem;
 
         &::before {
-            background-color: $primary-color;
             content: "\f053";
             display: block;
             left: 1rem;
@@ -726,9 +722,53 @@ $editbar-fg-color-active: $white;
             top: .8rem;
         }
     }
+}
+
+#offCanvasFilters {
+    .navigation-area {
+        padding: 2rem 0;
+        
+        .menu-wrapper {
+            // max-height: calc(100vh - 15rem);
+            // overflow-y: scroll;
+            // box-shadow: inset 0 10px 8px -10px rgba(0,0,0,0.07),inset 0 -10px 8px -10px rgba(0,0,0,0.07);
+
+            .is-drilldown {
+                min-height: 100% !important;
+            }
+        }
+    }
+
+    .drilldown .is-drilldown-submenu {
+        background: $light-gray;
+    }
+
+    .is-drilldown-submenu-parent {
+        border-top: 1px solid $iron;
+        a {
+            color: $oil;
+        }
+    }
+}
+
+#offCanvas {
+    background: $primary-color;
 
     * {
         color: $white;
+    }
+
+    .side-navigation .menu {
+        background: $primary-color;
+    }
+
+    .drilldown a {
+        background-color: $primary-color !important;
+    }
+
+    .js-drilldown-back::before {
+            background-color: $primary-color;
+            content: "\f053";
     }
 }
 
