--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -77,7 +77,6 @@ html {
     scroll-behavior: smooth;
 }
 
-
 .off-canvas-content {
     display: flex;
     flex-direction: column;
@@ -437,7 +436,8 @@ input[type="url"] {
     padding: 1rem 1.5rem !important;
     transition: all 200ms linear !important;
 
-    i.fa:first-child {
+    i.fa:first-child,
+    i.fas:first-child  {
         margin-right: .5rem;
     }
 
