Footer and translations

--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -2358,6 +2358,7 @@ li.unpaid {
     line-height: 100px;
     padding: 5px;
     text-align: center;
+    border-radius: .7rem;
 
     img {
         position: relative;
